<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">城市热线</string>
    <string name="next_str">下一步</string>
    <string name="title">城市热线</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rb_home">首页</string>
    <string name="rb_merchant">商家</string>
    <string name="guanzhu">关注</string>
    <string name="rb_mine">我的</string>
    <string name="rb_more">更多</string>
    <string name="set">设置</string>
    <string name="rb_privilege">优惠</string>
    <string name="comment">发表评论</string>
    <string name="about">关于</string>
    <string name="login">会员登录</string>
    <string name="region">会员注册</string>
    <string name="shangxie">商协</string>
    <string name="shangxieinfo">商协简介</string>
    <string name="shangxiedanwei">成员单位</string>
    <string name="shangxienews">商协动态</string>
    <string name="esh">24小时新帖：</string>
    <string name="shangxielist">商协列表</string>
    <string name="bbs">论坛</string>
    <string name="bbs_reply">回复帖子</string>
    <string name="post_info">帖子详情</string>
    <string name="post_report">发表帖子</string>
    <string name="report">发帖</string>
    <string name="photo_news">图片资讯</string>
    <string name="photo_info">图片详情</string>
    <string name="renzhengshijian">认证时间</string>
    <string name="chengyuanshu">成员数</string>
    <string name="luntan">论坛</string>
    <string name="bianmin">便民</string>
    <string name="teseshangjia">特色商家</string>
    <string name="meiritehui">每日特惠</string>
    <string name="xixun">资讯</string>
    <string name="local_xixun">本地资讯</string>
    <string name="xixuninfo">资讯详情</string>
    <string name="xixunpl">资讯评论</string>
    <string name="hint">文明上网  理性发言</string>
    <string name="send">发送</string>
    <string name="fatie">最新发帖</string>
    <string name="huifu">最新回复</string>
    <string name="top">置顶帖子</string>
    <string name="bankuai">论坛版块</string>
    <string name="jiaodian">焦点</string>
    <string name="tupian">图片</string>
    <string name="bendi">本地</string>
    <string name="zidingyi">自定义</string>
    <string name="zidingyifenlei">自定义分类</string>
    <!-- 城市列表 -->
    <string name="citylist">城市列表</string>
    <string name="inputCityName">请输入城市名称</string>
    <string name="nowPosition">当前定位城市</string>

    <!-- 首页使用 -->
    <string name="hots">热门优惠</string>
    <string name="shops">推荐商家</string>

    <!-- 用户登录注册信息 -->
    <string name="loginUserNameLabel">用户名</string>
    <string name="loginPasswordLabel">密码</string>
    <string name="loginSubmit">登陆</string>
    <string name="loginRegister">注册</string>
    <string name="loginRememberMe">记住我的账号和密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="ok_label">确认</string>
    <string name="passwordConfirm_label">确认密码</string>
    <string name="clearAll">清空</string>
    <string name="suggust_userName">用户名不能为空</string>
    <string name="suggust_passwordNotEmpty">密码不能为空</string>
    <string name="suggest_passwordNotSame">两次输入的密码不一致</string>
    <!-- 第三方登陆 -->
    <integer name="app_version_code">2</integer>

    <string name="app_version">2.0.0</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="ok">确定</string>
    <!-- 关于 -->
    <string name="verson">软件版本 ：4.7</string>
    <string name="versoninfo">版权信息：本软件版权归中国城市热线所有</string>
    <!-- 我的空间 -->
    <string name="myqzone">我的空间</string>
    <string name="revise">修改密码</string>
    <string name="new_addre">新建收货地址</string>
    <string name="defult_addre">默认地址</string>
    <string name="modify_addre">修改</string>
    <string name="delete_addre">删除</string>
    <!-- 更多 -->
    <string name="more">更多</string>
    <string name="nophoto">无图模式</string>
    <!-- 我的试用-->
    <string name="leftday">距离结束还有天</string>
    <string name="submitbtn">提交报告</string>
    <string name="apply_date">申请日期</string>
    <string name="tv_money">商品价格:</string>
    <!-- 基本信息 -->
    <string name="mylove">情感状况</string>
    <string name="mycollect">我的点评</string>
    <string name="edit">编辑</string>
    <string name="mycomment">我的收藏</string>
    <string name="info">基本信息</string>
    <string name="head">头像</string>
    <string name="mytryout">我的试用</string>
    <!-- 会员注册 -->
    <string name="register">会员注册</string>
    <string name="username">用户名/邮箱/手机号</string>
    <string name="userpassword">密码</string>
    <string name="sureword">确认密码</string>
    <string name="myemail">常用邮箱</string>
    <string name="myknow">我已阅读并同意</string>
    <string name="protocol">《城市热线注册协议》</string>
    <string name="sureregister">确定注册</string>
    <string name="quit">退出登录</string>
    <!-- 登陆 -->
    <string name="userlogin">会员登录</string>
    <string name="remberpowd">记住密码</string>
    <string name="voluntarily">自动登录</string>
    <string name="surelogin">立即登录</string>
    <string name="forgetpowd">忘记密码?</string>
    <string name="regist">手机快速注册</string>
    <string name="other"> 其他方式登陆</string>
    <string name="tencentqq">腾讯qq</string>
    <string name="sina">新浪</string>
    <!-- 商家分类 -->
    <string name="merchant_title">商家分类</string>
    <!-- 商家详情 -->
    <string name="business_details_title">商家详情</string>
    <string name="business_details_remind">综合评分：</string>
    <string name="business_details_like">喜欢</string>
    <string name="business_details_collect">收藏</string>
    <string name="business_details_share">分享</string>
    <string name="business_details_you">优</string>
    <string name="business_details_hui">惠</string>
    <string name="business_details_more">点击查看更多优惠详情</string>
    <string name="business_details_comment">用户评论</string>
    <string name="business_details_ask_comment">我要评论</string>
    <string name="privile_details">商家优惠</string>
    <!-- 商家列表 -->
    <string name="shops_list">商家列表</string>
    <string name="shops_list_area">全部区域</string>
    <string name="shops_list_all">全部分类</string>
    <string name="shops_list_order">默认排序</string>
    <!-- 商家评论 -->
    <string name="shops_discuss_title">发表评论</string>
    <string name="shops_discuss_start">评价星级：</string>
    <string name="shops_discuss_remind_title">请输入评论标题</string>
    <string name="shops_discuss_remind_context">请输入评论内容，60个字以内</string>
    <string name="shops_discuss_picture">插入图片</string>
    <string name="shops_discuss_picture_remidn">（图片小于500k）</string>
    <string name="shops_discuss_submit">提交评论</string>
    <!-- 评论列表 -->
    <string name="comment_discuss_title">评论列表</string>
    <string name="comment_discuss_pinglun">评论</string>
    <!-- 反馈 -->
    <string name="feedback">反馈信息</string>
    <string name="contactUs">请输入联系电话/邮箱/QQ号码</string>
    <string name="word">请输入您的宝贵建议，100个字以内</string>
    <string name="submit">提交信息</string>
    <string name="submits">提交</string>
    <!-- preferential -->
    <string name="prefere">全部优惠</string>
    <string name="all">全部分类</string>
    <string name="allpaixu">默认排序</string>
    <string name="allquyu">全部区域</string>
    <string name="privile">优惠详情</string>
    <string name="message">店家信息</string>
    <string name="introduce">活动介绍</string>
    <string name="time">活动时间:</string>
    <string name="prefereshop">活动商家：</string>
    <string name="prefereinfo">活动内容：</string>
    <string name="prefereadress">活动地址：</string>
    <string name="prefereitimer">2014.03.26-2014.04.30</string>
    <!-- 修改密码 -->
    <string name="password">原密码</string>
    <string name="surepassword">确认密码</string>
    <string name="newpassword">新密码</string>
    <string name="sureregister1">确定修改</string>
    <string name="fenxiang">分享</string>
    <string name="load_more">加载更多…</string>
    <string name="loading_more">正在加载中</string>
    <string name="loading_all">数据加载完毕</string>
    <string name="nostring">此板块没有信息，去其他版块看一下吧</string>
    <!-- 刷新 -->
 <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉即可查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>

    <string name="intent_error">网络错误</string>

</resources>