<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:background="#fc4d48"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/feeback_img"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp"
            android:src="@drawable/jt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
    <EditText 
        android:id="@+id/feedback_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:hint="@string/contactUs"
        android:background="@drawable/feedbacknumber"
        /><EditText 
         android:id="@+id/feedback_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
         android:gravity="top"
        android:maxLength="100"
        android:hint="@string/word"
        android:maxLines="5"
        
        android:background="@drawable/feedbackinfo"
        />

        <Button
            android:id="@+id/feedback_sure"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="#fc4d48"
            android:text="@string/submit" />
</LinearLayout>
</LinearLayout>
