<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:background="#fc4d48"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/update_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp"
            android:src="@drawable/jt" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/revise"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/updatepowd_powd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/xianre"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:password="true"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/updatepowd_newpowd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/xianreg"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/updatepowd_sureword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/xianreg"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/sureword"
                android:password="true"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/sureupdate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#fc4d48"
            android:text="@string/sureregister1"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>