<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/city_gray">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"

        android:background="#fc4d48"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/comment_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp"
            android:src="@drawable/jt" />

        <TextView   android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="70dp"
            android:layout_weight="1"
            android:text="@string/mycomment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/comment_delec"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg"
            android:focusable="false"
            android:text="@string/edit"
            android:visibility="invisible"/>
    </LinearLayout>
    <ListView android:id="@+id/lv_addre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="8dp"
        android:divider="@color/city_gray"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@color/transparent"
        android:padding="12dp"/>
    <Button android:id="@+id/btn_new"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="@drawable/btn_newaddre"
        android:text="@string/new_addre"
        android:textColor="@color/white"
        android:textSize="22sp"/>

</LinearLayout>