<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="16dp"

    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18dp"/>
        <TextView android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"/>

    </LinearLayout>
    <TextView android:id="@+id/tv_addre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="16dp"
        android:layout_marginLeft="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"
        android:layout_marginTop="6dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:padding="8dp">
        <TextView android:id="@+id/tv_defult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/defult_addre"
            android:textSize="17dp"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>
        <LinearLayout android:id="@+id/ll_modify"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="false">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/iv_modify"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_addre"
                android:textSize="14dp"
                android:textColor="@color/gray"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/ll_delete"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:focusable="false">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/iv_delete"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_addre"
                android:textSize="14dp"
                android:textColor="@color/gray"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>